<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FAQr</string>

    <string name="TAG">FAQr</string>

    <!-- API  -->

    <string name="GAMEFAQS_URL">http://m.gamefaqs.com</string>
    <string name="SEARCH_URL">/search/index.html?game=</string>

    <!-- Google Analytics  -->

    <string name="GA_TRACKING_ID">UA-37803338-1</string>

    <!-- APP -->

    <string name="search">Search</string>
    <string name="loading">Loading…</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="menu_prev">Prev</string>
    <string name="menu_next">Next</string>
    <string name="menu_close">Close</string>
    <string name="menu_saved">My FAQs</string>
    <string name="display_options">Display Options</string>
    <string name="no_results">No Saved FAQs</string>
    <string name="no_search_results">No Results Found</string>
    <string name="menu_search">Search for FAQs</string>
    <string name="action_search">Search for FAQs</string>
    <string name="search_hint">Search by game title</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="menu_faqmarks">My FAQmarks</string>
    <string name="menu_find">Search in FAQ</string>
    <string name="find_hint">Search in FAQ</string>
    <string name="menu_goto">Go to FAQmark</string>
    <string name="menu_lock">Lock Orientation</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_browser">Open In Browser</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_clear">Clear</string>
    <string name="close">Close</string>
    <string name="menu_clear_history">Clear Search History</string>
    <string name="menu_delete">Delete All FAQs</string>
    <string name="menu_delete_faqmarks">Delete All FAQmarks</string>
    <string name="menu_sort">Sort FAQs</string>
    <string name="menu_sort_alpha">Sort By Title</string>
    <string name="menu_sort_date">Sort By Date Added</string>
    <string name="menu_sort_size">Sort By Size</string>
    <string name="theme">THEME</string>
    <string name="typeface">TYPEFACE</string>
    <string name="mono_font_size">MONO FONT SIZE</string>
    <string name="variable_font_size">VARIABLE FONT SIZE</string>

    <!-- 79 characters/line is the traditional standard for ASCII text files -->
    <string name="standard_width">===============================================================================</string>

    <!-- Glyphicons -->

    <string name="glyphicons_file">fonts/glyphicons-regular.ttf</string>

    <string name="icon_checked">\ue153</string>
    <string name="icon_unchecked">\ue154</string>
    <string name="icon_thumbs_up">\ue344</string>
    <string name="icon_user">\ue004</string>
    <string name="icon_exercise">\ue592</string>
    <string name="icon_conversation">\ue245</string>
    <string name="icon_headset">\ue078</string>
    <string name="icon_exit">\ue389</string>
    <string name="icon_chevron_right">\ue224</string>
    <string name="icon_chevron_left">\ue225</string>

    <string name="icon_text_smaller">\ue116</string>
    <string name="icon_text_bigger">\ue117</string>

    <string name="icon_left_justify">\ue111</string>
    <string name="icon_right_justify">\ue113</string>
    <string name="icon_center_justify">\ue112</string>


    <!-- v2 -->
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_section1">My FAQs</string>
    <string name="title_section2">Search</string>
    <string name="title_section3">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>