<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_prev"
        android:icon="@drawable/ic_navigation_collapse"
        app:showAsAction="always"
        android:title="@string/menu_prev"/>
    <item
        android:id="@+id/menu_next"
        android:icon="@drawable/ic_navigation_expand"
        app:showAsAction="always"
        android:title="@string/menu_next"/>
    <item
        android:id="@+id/menu_goto_prev"
        android:icon="@drawable/ic_navigation_collapse"
        app:showAsAction="always"
        android:title="@string/menu_prev"/>
    <item
        android:id="@+id/menu_goto_next"
        android:icon="@drawable/ic_navigation_expand"
        app:showAsAction="always"
        android:title="@string/menu_next"/>
    <item
        android:id="@+id/menu_goto_close"
        android:icon="@drawable/ic_navigation_cancel"
        app:showAsAction="always"
        android:title="@string/menu_close"/>
    
    
    
    <item
        android:id="@+id/menu_display_options"
        android:icon="@drawable/ic_menu_settings_dark"
        app:showAsAction="never"
        android:title="Display Options"/>

    <!--
         <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_menu_search"
        android:showAsAction="collapseActionView|never"
        android:title="@string/menu_search"/>
    -->
    <!--
         <item
        android:id="@+id/menu_downloads"
        android:icon="@drawable/ic_menu_download"
        android:showAsAction="collapseActionView|never"
        android:title="@string/menu_saved"/>
    -->
    <item
        android:id="@+id/menu_faqmarks"
        android:icon="@drawable/ic_menu_star"
        app:showAsAction="never"
        android:title="@string/menu_faqmarks"/>
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/menu_browser"
        android:icon="@drawable/ic_menu_view"
        app:showAsAction="never"
        android:title="@string/menu_browser"/>
    <!-- <item
        android:id="@+id/menu_goto"
        android:icon="@drawable/ic_menu_goto"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_goto"/> -->
    <!--
         <item
        android:id="@+id/menu_lock"
        android:icon="@drawable/ic_menu_login"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_lock"/>
    -->
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_preferences"
        app:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_menu_info_details"
        app:showAsAction="never"
        android:title="@string/menu_about"/>

</menu>