<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:fadingEdge="none"
    android:overScrollMode="never" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            android:id="@+id/theme"
            style="@style/DisplayOptionsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme" >
        </TextView>

        <Spinner
            android:id="@+id/theme_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/typeface"
            style="@style/DisplayOptionsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TYPEFACE" >
        </TextView>

        <Spinner
            android:id="@+id/typeface_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:spinnerMode="dialog" />

        <LinearLayout
            android:id="@+id/do_text_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" >

            <TextView
                android:id="@+id/text_smaller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/display_options_button"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textSize="20sp"
                android:text="@string/icon_text_smaller" >
            </TextView>

            <TextView
                android:id="@+id/textsize"
                style="@style/DisplayOptionsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="FONT SIZE" >
            </TextView>

            <TextView
                android:id="@+id/text_larger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/display_options_button"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textSize="20sp"
                android:text="@string/icon_text_bigger" >
            </TextView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/do_justify"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" >

            <TextView
                android:id="@+id/left_justify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/display_options_button"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/icon_left_justify" >
            </TextView>

            <TextView
                android:id="@+id/center_justify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/display_options_button"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/icon_center_justify" >
            </TextView>

            <TextView
                android:id="@+id/right_justify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/display_options_button"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/icon_right_justify" >
            </TextView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>